# SSN_SoftShadowNet

./: .gitignore  .gitmodules  Dataset.ipynb  README.md  SSN_Dataset.py  random_pattern.py
Data/src/: Dataset  Models  arg_parse.cpp  arg_parse.h  base.py  build_hdf5.py  compile_commands.json  dataset  main.cu  random_pattern.py  render.py  render.sh  visualize.ipynb
Train/: Dataset  Dataset.ipynb  Trainer.py  train.sh
Train/configs/: ssn.yaml  template.yaml
Train/datasets/: SSN_Dataset.py  __init__.py  random_pattern.py
Train/models/: SSN.py  blocks.py
Train/utils/: utils.py  vis_writer.py
data/: README.md
data/script/: Untitled.ipynb  general_ds_fix.py  general_models.csv  generate_benchmark_script.py  generate_ibl.py  human_models.csv  mts_template.xml  pick_models.py  random_fov.py  random_fov.txt  render_dataset.py  tmp.py  workspace.code-workspace
data/sh_script/: build.sh  general_touch.sh  general_touch1.sh  general_touch2.sh  generate_dataset.sh  render.sh  render2.sh  render3.sh  render_benchmark.sh  render_benchmark1.sh  render_benchmark2.sh  (+21 more)
data/src/: CMakeLists.txt  Image.h  arg_parse.cpp  arg_parse.h  build_hdf5.py  common.cpp  common.h  compile_commands.json  continuous_fov.cu  data_rasterizer.cu  data_rasterizer.h  force_fov.cu  main.cu  mesh.cpp  mesh.h  model_loader.cpp  model_loader.h  ppc.cpp  ppc.h  ray_intersect.cu  ray_intersect.h  render.py  render.sh  visualize.ipynb
data/src/Data_Renderer/: data_rasterizer.cu  data_rasterizer.h  ray_intersect.cu  ray_intersect.h  render_helper.h  renderer.cu  renderer.h
data/src/Render_DS/: Image.cu  Image.h  Render_DS.h  ppc.cpp  ppc.h
demo_render/: render.py
network/: params.py  train_general_baseline.sh  train_human_baseline.sh  train_relight_ssn.py
(+65 files in other folders)
